<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/fragment_teacher_title" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/fragment_teacher_name_title" />

        <TextView
            android:id="@+id/profile_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_name" />

        <TextView
            android:id="@+id/profile_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/fragment_teacher_surname_title" />

        <TextView
            android:id="@+id/profile_surname_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_surname" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/fragment_teacher_email_title" />

        <TextView
            android:id="@+id/profile_email_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_email" />

        <TextView
            android:id="@+id/profile_place_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/fragment_teacher_place_1_title" />

        <TextView
            android:id="@+id/profile_place_1_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_place_1" />

        <TextView
            android:id="@+id/profile_place_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/fragment_teacher_place_2_title" />

        <TextView
            android:id="@+id/profile_place_2_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_place_2" />

        <TextView
            android:id="@+id/profile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/fragment_teacher_number_title" />

        <TextView
            android:id="@+id/profile_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_number" />

        <TextView
            android:id="@+id/profile_subjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="12sp"
            android:text="@string/fragment_teacher_subjects_title" />

        <TextView
            android:id="@+id/profile_subjects_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_subjects" />

        <TextView
            android:id="@+id/profile_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/fragment_teacher_hours_title"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/profile_hours_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_hours" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_teacher_review_title"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:errorEnabled="true">

             <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_teacher_review_hint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:textSize="16sp"
            android:text="@string/fragment_teacher_review_button"/>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/fragment_recyclerview_review"/>

    </LinearLayout>

</ScrollView>